--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Required for creating release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,7 +19,7 @@ jobs:
         run: |
           cd ./Packages/com.github.adaptivehaptics.adapticsengine
           FILE=$(npm pack | tail -n 1)
-          echo ::set-output name=file::${FILE}
+          echo "file=${FILE}" >> $GITHUB_OUTPUT
           mv ${FILE} ../..
 
       - name: Release
